--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <tr><td>sakura </td><td>🔇🔇</td></tr>
         <tr><td>KAKASHI </td><td>⭐⭐⭐⭐⭐</td></tr>
         <tr><td>MADARA </td><td>♾️♾️</td></tr>
-        <tr><td>HASHIRAMA </td><td>⭐⭐⭐⭐⭐</td></tr>
+        <tr><td>HASHIRAMA </td><td>⭐⭐⭐⭐</td></tr>
 </table>
 <form>
     <label>RATE THE WEBSITE</label>
