--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </thead>
 </table>
     <table border = "2"><tr><td>NARUTO </td><td>⭐⭐⭐⭐⭐</td></tr>
-        <tr><td>SASUKE </td><td>⭐⭐⭐⭐</td></tr>
+        <tr><td>SASUKE </td><td>⭐⭐⭐⭐⭐</td></tr>
         <tr><td>sakura </td><td>🔇🔇</td></tr>
         <tr><td>KAKASHI </td><td>⭐⭐⭐⭐⭐</td></tr>
         <tr><td>MADARA </td><td>♾️♾️</td></tr>
